--- a/photography.html
+++ b/photography.html
@@ -14,6 +14,7 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
       <script src="script.js"></script>
       <link rel ="stylesheet" href ="main.css">
+      <script src="https://kit.fontawesome.com/0ff32d8fcb.js" crossorigin="anonymous"></script>
     </head>
     <body>
       <div class = "container-fluid">
@@ -65,6 +66,28 @@
                 <li class="nav-item li_dot">
                   <a class="nav-link" href='contact.html'><strong>Contact</strong></a>
                 </li>
+                <div class = "hide-big">
+                  <ul class = "navbar-nav nav-flex-icons flex-row">
+                    <li class="nav-item">
+                      <a class="nav-link" href="https://vimeo.com/user65399121" target = "_blank">
+                        <i class="fab fa-vimeo-v">
+                        </i>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href = "https://www.instagram.com/ciarangravestock/" target = "_blank">
+                        <i class="fab fa-instagram">
+                        </i>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="https://www.linkedin.com/in/ciaran-gravestock-b8abb41b0/" target = "_blank">
+                        <i class="fab fa-linkedin-in">
+                        </i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </ul>
             </div>
             <!-- Collapsible content -->
@@ -87,17 +110,20 @@
           </ul>
         </div>
       -->
-        <div id = "socials" class = "text-center hide-small">
-           <a href="https://vimeo.com/user65399121" target="_blank">
-             <img src="images/VIMEO.png" alt="Instagram Logo" class="social-icon">
-           </a>
-           <a href="https://www.instagram.com/ciarangravestock/" target="_blank">
-             <img src="images/INSTAGRAM.png" alt="Facebook Logo" class="social-icon">
-           </a>
-           <a href="https://www.linkedin.com/in/ciaran-gravestock-b8abb41b0/" target="_blank">
-             <img src="images/LINKEDIN.png" alt="Twitter Logo" class="social-icon">
-           </a>
-         </div>
+      <div  class = "text-center hide-small">
+        <a href="https://vimeo.com/user65399121" target = "_blank">
+          <i class="fa-lg fab fa-vimeo-v social-padding">
+          </i>
+        </a>
+         <a href = "https://www.instagram.com/ciarangravestock/" target = "_blank">
+           <i class="fa-lg fab fa-instagram social-padding">
+           </i>
+         </a>
+         <a href="https://www.linkedin.com/in/ciaran-gravestock-b8abb41b0/" target = "_blank">
+           <i class="fa-lg fab fa-linkedin-in social-padding">
+           </i>
+         </a>
+       </div>
          <div class = "main-container">
            <p class = "align-center">Capturing wildlife is always fasinating. To capture so much life within a single photo brings out some of the best creativity.</p>
            <div class="row">
