--- a/photography.html
+++ b/photography.html
@@ -2,7 +2,7 @@
 <html>
     <head>
       <meta charset ="utf-8">
-      <meta name ="description" content ="The Little Polytunnel">
+      <meta name ="description" content ="Ciaran Gravestock">
       <meta name ="author" content ="Thomas Nikoloff">
       <meta name ="keywords" content="Survey, Form">
       <meta name ="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,7 +35,7 @@
             </button>
 
             <!-- Collapsible content -->
-            <div class="collapse navbar-collapse" id="navbarSupportedContent20">
+            <div class="collapse navbar-collapse text-center" id="navbarSupportedContent20">
               <ul id = "nav-bar" class="navbar-nav mx-auto float-lg-none text-lg-center">
                   <li class="nav-item">
                     <a class="nav-link" href="about.html"><strong>About</strong></a>
@@ -92,24 +92,23 @@
             </div>
             <!-- Collapsible content -->
           </nav>
+          <div id = "sub-nav" class = "hide-small text-center">
+            <ul class = "list-inline sub-flex">
+              <li class="list-inline-item">
+                <a href="sub_nav/events.html"><strong>Events</strong></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="sub_nav/landscape.html"><strong>Landscape</strong></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="sub_nav/nature.html"><strong>Nature</strong></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="photography.html"><strong>Widlife</strong></a>
+              </li>
+            </ul>
+         </div>
 
-<!--        <div id = "sub-nav">
-          <ul class = "nav-bar">
-            <li>
-              <a href="sub_nav/events.html"><strong>Events</strong></a>
-            </li>
-            <li>
-              <a href="sub_nav/landscape.html"><strong>Landscape</strong></a>
-            </li>
-            <li>
-              <a href="sub_nav/nature.html"><strong>Nature</strong></a>
-            </li>
-            <li>
-              <a href="photography.html"><strong>Widlife</strong></a>
-            </li>
-          </ul>
-        </div>
-      -->
       <div  class = "text-center hide-small">
         <a href="https://vimeo.com/user65399121" target = "_blank">
           <i class="fa-lg fab fa-vimeo-v social-padding">
@@ -125,7 +124,7 @@
          </a>
        </div>
          <div class = "main-container">
-           <p class = "align-center">Capturing wildlife is always fasinating. To capture so much life within a single photo brings out some of the best creativity.</p>
+           <p class = "text-center">Capturing wildlife is always fasinating. To capture so much life within a single photo brings out some of the best creativity.</p>
            <div class="row">
 
              <!--Grid column-->
