--- a/sub_nav/nature.html
+++ b/sub_nav/nature.html
@@ -19,7 +19,7 @@
     <body>
       <div class = "container-fluid">
         <div class = "hide-small">
-         <a href="../index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
+         <a href="../index.html"><img id="header-img" src="../images/logo.png" alt="company-logo"></a>
          <h1 class = "text-center" id = "header">CIARAN GRAVESTOCK</h1>
         </div>
         <nav class="navbar navbar-expand-md">
