--- a/sub_nav/nature.html
+++ b/sub_nav/nature.html
@@ -24,7 +24,7 @@
         </div>
         <nav class="navbar navbar-expand-md">
           <a class="navbar-brand hide-big" href="../index.html">
-            <img src="images/logo.png" width="40" height="100%" alt="">
+            <img src="../images/logo.png" width="40" height="100%" alt="">
             <span style = "color: black;">CIARAN GRAVESTOCK</span>
           </a>
 
