--- a/videography.html
+++ b/videography.html
@@ -2,7 +2,7 @@
 <html>
     <head>
       <meta charset ="utf-8">
-      <meta name ="description" content ="The Little Polytunnel">
+      <meta name ="description" content ="Ciaran Gravestock">
       <meta name ="author" content ="Thomas Nikoloff">
       <meta name ="keywords" content="Survey, Form">
       <meta name ="viewport" content="width=device-width, initial-scale=1.0">
