--- a/photography.html
+++ b/photography.html
@@ -125,9 +125,45 @@
        </div>
          <div class = "main-container">
            <p class = "text-center">Capturing wildlife is always fasinating. To capture so much life within a single photo brings out some of the best creativity.</p>
-           <div class = "text-center">
-             <h1 id = "coming-soon"> COMING SOON </h1>
+           <div class="row">
+
+             <!--Grid column-->
+             <div class="col-lg-4 col-md-12 mb-4">
+
+               <img src="https://i1.lensdump.com/i/jSQfqi.jpg" alt="jSQfqi.jpg" class="img-fluid mb-4" alt="">
+
+               <img src="https://i1.lensdump.com/i/jSQFMo.jpg" alt="jSQFMo.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.3s">
+
+             </div>
+             <!--Grid column-->
+
+             <!--Grid column-->
+             <div class="col-lg-4 col-md-6 mb-4">
+
+               <img src="https://i1.lensdump.com/i/jSQPjm.jpg" alt="jSQPjm.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.1s">
+
+               <img src="https://i1.lensdump.com/i/jSQotK.jpg" alt="jSQotK.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.4s">
+
+             </div>
+             <!--Grid column-->
+
+             <!--Grid column-->
+             <div class="col-lg-4 col-md-6 mb-4">
+
+               <img src="https://i1.lensdump.com/i/jSQuKZ.jpg" alt="jSQuKZ.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.2s">
+
+               <img src="https://i1.lensdump.com/i/jSQDPP.jpg" alt="jSQDPP.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.5s">
+
+             </div>
+             <!--Grid column-->
+
            </div>
+
          </div>
        </div>
     </body>
