--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
         </div>
         <nav class="navbar navbar-expand-md">
           <a class="navbar-brand hide-big" href="index.html">
-            <img src="images/logo.png" width="40" height="100%" alt="">
-            <span style = "color: black;">CIARAN GRAVESTOCK</span>
+            <img id = "header-img-mobile" src="images/logo.png" width="40" height="100%" alt="">
+            <span id = "header-mobile" style = "color: black;">CIARAN GRAVESTOCK</span>
           </a>
 
             <!-- Collapse button -->
