--- a/videography.html
+++ b/videography.html
@@ -4,7 +4,7 @@
       <meta charset ="utf-8">
       <meta name ="description" content ="Ciaran Gravestock">
       <meta name ="author" content ="Thomas Nikoloff">
-      <meta name ="keywords" content="Survey, Form">
+      <meta name ="keywords" content="Ciaran, Gravestock">
       <meta name ="viewport" content="width=device-width, initial-scale=1.0">
       <title>Ciaran Gravestock</title>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
