--- a/contact.html
+++ b/contact.html
@@ -52,10 +52,10 @@
                       <strong>Photography</strong>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="#"><strong>Events</strong></a>
-                      <a class="dropdown-item" href="#"><strong>Landscape</strong></a>
-                      <a class="dropdown-item" href="#"><strong>Portraits</strong></a>
-                      <a class="dropdown-item" href="#"><strong>Wildlife</strong></a>
+                      <a class="dropdown-item" href="sub_nav/portrait.html"><strong>Portrait</strong></a>
+                      <a class="dropdown-item" href="sub_nav/landscape.html"><strong>Landscape</strong></a>
+                      <a class="dropdown-item" href="sub_nav/nature.html"><strong>Nature</strong></a>
+                      <a class="dropdown-item" href="photography.html"><strong>Wildlife</strong></a>
                     </div>
                   </li>
                 </div>
