--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <strong>Photography</strong>
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="sub_nav/events.html"><strong>Portrait</strong></a>
+                        <a class="dropdown-item" href="sub_nav/portrait.html"><strong>Portrait</strong></a>
                         <a class="dropdown-item" href="sub_nav/landscape.html"><strong>Landscape</strong></a>
                         <a class="dropdown-item" href="sub_nav/nature.html"><strong>Nature</strong></a>
                         <a class="dropdown-item" href="photography.html"><strong>Wildlife</strong></a>
