--- a/sub_nav/portrait.html
+++ b/sub_nav/portrait.html
@@ -52,7 +52,7 @@
                       <strong>Photography</strong>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="events.html"><strong>Events</strong></a>
+                      <a class="dropdown-item" href="portrait.html"><strong>Portrait</strong></a>
                       <a class="dropdown-item" href="landscape.html"><strong>Landscape</strong></a>
                       <a class="dropdown-item" href="nature.html"><strong>Nature</strong></a>
                       <a class="dropdown-item" href="../photography.html"><strong>Wildlife</strong></a>
