Menu item fully changed and working

--- a/photography.html
+++ b/photography.html
@@ -52,7 +52,7 @@
                       <strong>Photography</strong>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="sub_nav/portrait.html"><strong>Portrait</strong></a>
+                      <a class="dropdown-item" href="sub_nav/portrait.html"><strong>Portraiture</strong></a>
                       <a class="dropdown-item" href="sub_nav/landscape.html"><strong>Landscape</strong></a>
                       <a class="dropdown-item" href="sub_nav/nature.html"><strong>Nature</strong></a>
                       <a class="dropdown-item" href="photography.html"><strong>Wildlife</strong></a>
@@ -95,7 +95,7 @@
           <div id = "sub-nav" class = "hide-small text-center">
             <ul class = "list-inline sub-flex">
               <li class="list-inline-item">
-                <a href="sub_nav/events.html"><strong>Events</strong></a>
+                <a href="sub_nav/portrait.html"><strong>Portraiture</strong></a>
               </li>
               <li class="list-inline-item">
                 <a href="sub_nav/landscape.html"><strong>Landscape</strong></a>
