About container change

--- a/about.html
+++ b/about.html
@@ -108,10 +108,10 @@
            </div>
          <div class = "about-container">
            <div class = "row">
-             <div class = "col-md-4">
+             <div class = "col-sm-4">
                  <img id = "profile" src="images/frosty-1.jpg" class="img-responsive" width = "100%" max-height = "100%" alt="myself.jpg" border="0" />
              </div>
-             <div class = "col-md-8">
+             <div class = "col-sm-8">
                <p class = "para">In 2017 I first worked on a short film production as a runner. Despite making teas and coffees, feeling the working atmosphere and seeing how a final film
                 is made, I soon quickly realised this is the industry I want to get into. To kickstart my career, I took a film and television course at college.  While carrying
                 on freelance work, I studied hard to learn the theory and practical skills I will need in the future. I quickly honed in what was most passionate to me; photography
