--- a/contact.html
+++ b/contact.html
@@ -112,18 +112,21 @@
              <p>Please feel free to reach out! I'm very happy to answer any inquiries about my <br> services and work.  Fill in the forum below or use my socials to contact.</p>
            </div>
            <div class = "row">
-             <div class = "col-md-3">
-               <label id="name-label" for="name">First Name<span class="mandatory">*</span></label><br>
+             <div class = "col-sm-3">
+               <label class="contact" for="name">First Name<span class="mandatory">*</span></label><br>
                <input id="name" type="text" name="full_name" placeholder="Enter your name here" required/>
              </div>
-             <div class = "col-md-9">
-               <label id="name-label" for="name">Last Name<span class="mandatory">*</span></label><br>
+             <div class = "col-sm-9">
+               <label class="contact" for="name">Last Name<span class="mandatory">*</span></label><br>
                <input id="name" type="text" name="full_name" placeholder="Enter your name here" required/>
              </div>
            </div>
            <div style = "padding: 20px 0;">
-             <label id="comments">Any additional comments or suggestions?</label><br>
+             <label class="contact">Any additional comments or suggestions?</label><br>
              <textarea type="text" placeholder="Enter your comments here....."></textarea><br>
+           </div>
+           <div id="submit-div" align="center">
+             <button id="submit" type="submit">Submit</button>
            </div>
          </div>
       </div>
