Removing pointless code

--- a/sub_nav/landscape.html
+++ b/sub_nav/landscape.html
@@ -129,10 +129,9 @@
              <!--Grid column-->
              <div class="col-lg-6 col-md-12 mb-4">
 
-               <img src="https://i1.lensdump.com/i/jSVjS0.jpg" alt="jSVjS0.jpg" class="img-fluid mb-4" alt="">
+               <img src="https://i1.lensdump.com/i/jSVjS0.jpg" alt="jSVjS0.jpg" class="img-fluid mb-4">
 
-               <img src="https://i1.lensdump.com/i/jSViC3.jpg" alt="jSViC3.jpg" class="img-fluid mb-4" alt=""
-                 data-wow-delay="0.3s">
+               <img src="https://i1.lensdump.com/i/jSViC3.jpg" alt="jSViC3.jpg" class="img-fluid mb-4">
 
              </div>
              <!--Grid column-->
@@ -140,11 +139,9 @@
              <!--Grid column-->
              <div class="col-lg-6 col-md-6 mb-4">
 
-               <img src="https://i1.lensdump.com/i/jSVAhF.jpg" alt="jSVAhF.jpg" class="img-fluid mb-4" alt=""
-                 data-wow-delay="0.1s">
+               <img src="https://i1.lensdump.com/i/jSVAhF.jpg" alt="jSVAhF.jpg" class="img-fluid mb-4">
 
-               <img src="https://i1.lensdump.com/i/jSV8Yr.jpg" alt="jSV8Yr.jpg" class="img-fluid mb-4" alt=""
-                 data-wow-delay="0.4s">
+               <img src="https://i1.lensdump.com/i/jSV8Yr.jpg" alt="jSV8Yr.jpg" class="img-fluid mb-4">
 
              </div>
            </div>
