--- a/sub_nav/nature.html
+++ b/sub_nav/nature.html
@@ -129,10 +129,9 @@
              <!--Grid column-->
              <div class="col-lg-6 col-md-12 mb-4">
 
-               <img src="https://i1.lensdump.com/i/jSQwwC.jpg" alt="jSQwwC.jpg" class="img-fluid mb-4" alt="">
+               <img src="https://i1.lensdump.com/i/jSQwwC.jpg" alt="jSQwwC.jpg" class="img-fluid mb-4">
 
-               <img src="https://i1.lensdump.com/i/jSQbzv.jpg" alt="jSQbzv.jpg" class="img-fluid mb-4" alt=""
-                 data-wow-delay="0.3s">
+               <img src="https://i1.lensdump.com/i/jSQbzv.jpg" alt="jSQbzv.jpg" class="img-fluid mb-4">
 
              </div>
              <!--Grid column-->
@@ -140,11 +139,9 @@
              <!--Grid column-->
              <div class="col-lg-6 col-md-6 mb-4">
 
-               <img src="https://i1.lensdump.com/i/jSQXC2.jpg" alt="jSQXC2.jpg" class="img-fluid mb-4" alt=""
-                 data-wow-delay="0.1s">
+               <img src="https://i1.lensdump.com/i/jSQXC2.jpg" alt="jSQXC2.jpg" class="img-fluid mb-4">
 
-               <img src="https://i1.lensdump.com/i/jSQUh9.jpg" alt="jSQUh9.jpg" class="img-fluid mb-4" alt=""
-                 data-wow-delay="0.4s">
+               <img src="https://i1.lensdump.com/i/jSQUh9.jpg" alt="jSQUh9.jpg" class="img-fluid mb-4">
 
              </div>
            </div>
