Added portraiture images

--- a/sub_nav/portrait.html
+++ b/sub_nav/portrait.html
@@ -123,11 +123,37 @@
            </i>
          </a>
        </div>
-         <div class = "main-container">
-           <div class = "text-center">
-             <h1 id = "coming-soon"> COMING SOON </h1>
+       <div class = "main-container">
+         <div class="row">
+
+           <!--Grid column-->
+           <div class="col-12 mb-4">
+
+             <img src="https://i.lensdump.com/i/I2JjY5.jpg" alt="1" class="img-fluid mb-4">
+
+           </div>
+           <!--Grid column-->
+
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-12 mb-4">
+
+             <img src="https://i.lensdump.com/i/I2JI2z.jpg" alt="7" class="img-fluid mb-4">
+
+             <img src="https://i1.lensdump.com/i/I2JgSb.jpg" alt="9" class="img-fluid mb-4">
+
+           </div>
+           <!--Grid column-->
+
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-6 mb-4">
+
+             <img src="https://i1.lensdump.com/i/I2JZJT.jpg" alt="8" class="img-fluid mb-4">
+
+             <img src="https://i.lensdump.com/i/I2Jrx7.jpg" alt="10" class="img-fluid mb-4">
+
            </div>
          </div>
-      </div>
-    </body>
+       </div>
+    </div>
+  </body>
 </html>
