--- a/sub_nav/portrait.html
+++ b/sub_nav/portrait.html
@@ -152,6 +152,25 @@
              <img src="https://i.lensdump.com/i/I2Jrx7.jpg" alt="10" class="img-fluid mb-4">
 
            </div>
+           <!--Grid column-->
+           <div class="col-12 mb-4">
+
+             <img src="https://i.lensdump.com/i/I2J1Rr.jpg" alt="24" class="img-fluid mb-4">
+
+           </div>
+           <!--Grid column-->
+           <div class="col-12 mb-4">
+
+             <img src="https://i1.lensdump.com/i/I2JRpF.jpg" alt="25" class="img-fluid mb-4">
+
+           </div>
+           <!--Grid column-->
+           <div class="col-12 mb-4">
+
+             <img src="https://i1.lensdump.com/i/I2JTF3.jpg" alt="26" class="img-fluid mb-4">
+
+           </div>
+           <!--Grid column-->
          </div>
        </div>
     </div>
