--- a/photography.html
+++ b/photography.html
@@ -52,10 +52,10 @@
                       <strong>Photography</strong>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="sub_nav/portrait.html"><strong>Portraiture</strong></a>
+                      <a class="dropdown-item" href="photography.html"><strong>Portraiture</strong></a>
                       <a class="dropdown-item" href="sub_nav/landscape.html"><strong>Landscape</strong></a>
                       <a class="dropdown-item" href="sub_nav/nature.html"><strong>Nature</strong></a>
-                      <a class="dropdown-item" href="photography.html"><strong>Wildlife</strong></a>
+                      <a class="dropdown-item" href="sub_nav/portrait.html"><strong>Wildlife</strong></a>
                     </div>
                   </li>
                 </div>
@@ -123,48 +123,56 @@
            </i>
          </a>
        </div>
-         <div class = "main-container">
-           <p class = "text-center">Capturing wildlife is always fasinating. To capture so much life within a single photo brings out some of the best creativity.</p>
-           <div class="row">
+       <div class = "main-container">
+         <div class="row">
 
-             <!--Grid column-->
-             <div class="col-lg-4 col-md-12 mb-4">
+           <!--Grid column-->
+           <div class="col-12 mb-4">
 
-               <img src="https://i1.lensdump.com/i/jSQfqi.jpg" alt="jSQfqi.jpg" class="img-fluid mb-4" alt="">
-
-               <img src="https://i1.lensdump.com/i/jSQFMo.jpg" alt="jSQFMo.jpg" class="img-fluid mb-4" alt=""
-                 data-wow-delay="0.3s">
-
-             </div>
-             <!--Grid column-->
-
-             <!--Grid column-->
-             <div class="col-lg-4 col-md-6 mb-4">
-
-               <img src="https://i1.lensdump.com/i/jSQPjm.jpg" alt="jSQPjm.jpg" class="img-fluid mb-4" alt=""
-                 data-wow-delay="0.1s">
-
-               <img src="https://i1.lensdump.com/i/jSQotK.jpg" alt="jSQotK.jpg" class="img-fluid mb-4" alt=""
-                 data-wow-delay="0.4s">
-
-             </div>
-             <!--Grid column-->
-
-             <!--Grid column-->
-             <div class="col-lg-4 col-md-6 mb-4">
-
-               <img src="https://i1.lensdump.com/i/jSQuKZ.jpg" alt="jSQuKZ.jpg" class="img-fluid mb-4" alt=""
-                 data-wow-delay="0.2s">
-
-               <img src="https://i1.lensdump.com/i/jSQDPP.jpg" alt="jSQDPP.jpg" class="img-fluid mb-4" alt=""
-                 data-wow-delay="0.5s">
-
-             </div>
-             <!--Grid column-->
+             <img src="https://i.lensdump.com/i/I2JjY5.jpg" alt="1" class="img-fluid mb-4">
 
            </div>
+           <!--Grid column-->
 
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-12 mb-4">
+
+             <img src="https://i.lensdump.com/i/I2JI2z.jpg" alt="7" class="img-fluid mb-4">
+
+             <img src="https://i1.lensdump.com/i/I2JgSb.jpg" alt="9" class="img-fluid mb-4">
+
+           </div>
+           <!--Grid column-->
+
+           <!--Grid column-->
+           <div class="col-lg-6 col-md-6 mb-4">
+
+             <img src="https://i1.lensdump.com/i/I2JZJT.jpg" alt="8" class="img-fluid mb-4">
+
+             <img src="https://i.lensdump.com/i/I2Jrx7.jpg" alt="10" class="img-fluid mb-4">
+
+           </div>
+           <!--Grid column-->
+           <div class="col-12 mb-4">
+
+             <img src="https://i.lensdump.com/i/I2J1Rr.jpg" alt="24" class="img-fluid mb-4">
+
+           </div>
+           <!--Grid column-->
+           <div class="col-12 mb-4">
+
+             <img src="https://i1.lensdump.com/i/I2JRpF.jpg" alt="25" class="img-fluid mb-4">
+
+           </div>
+           <!--Grid column-->
+           <div class="col-12 mb-4">
+
+             <img src="https://i1.lensdump.com/i/I2JTF3.jpg" alt="26" class="img-fluid mb-4">
+
+           </div>
+           <!--Grid column-->
          </div>
-       </div>
-    </body>
+      </div>
+    </div>
+  </body>
 </html>
