--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                         <strong>Photography</strong>
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="sub_nav/portrait.html"><strong>Portraiture</strong></a>
+                        <a class="dropdown-item" href="photography.html"><strong>Portraiture</strong></a>
                         <a class="dropdown-item" href="sub_nav/landscape.html"><strong>Landscape</strong></a>
                         <a class="dropdown-item" href="sub_nav/nature.html"><strong>Nature</strong></a>
-                        <a class="dropdown-item" href="photography.html"><strong>Wildlife</strong></a>
+                        <a class="dropdown-item" href="sub_nav/wildlife.html"><strong>Wildlife</strong></a>
                       </div>
                     </li>
                   </div>
