--- a/photography.html
+++ b/photography.html
@@ -55,7 +55,7 @@
                       <a class="dropdown-item" href="photography.html"><strong>Portraiture</strong></a>
                       <a class="dropdown-item" href="sub_nav/landscape.html"><strong>Landscape</strong></a>
                       <a class="dropdown-item" href="sub_nav/nature.html"><strong>Nature</strong></a>
-                      <a class="dropdown-item" href="sub_nav/portrait.html"><strong>Wildlife</strong></a>
+                      <a class="dropdown-item" href="sub_nav/wildlife.html"><strong>Wildlife</strong></a>
                     </div>
                   </li>
                 </div>
@@ -104,7 +104,7 @@
                 <a href="sub_nav/nature.html"><strong>Nature</strong></a>
               </li>
               <li class="list-inline-item">
-                <a href="sub_nav/portrait.html"><strong>Widlife</strong></a>
+                <a href="sub_nav/wildlife.html"><strong>Wildlife</strong></a>
               </li>
             </ul>
          </div>
