removing poitnless code

--- a/sub_nav/wildlife.html
+++ b/sub_nav/wildlife.html
@@ -130,22 +130,9 @@
            <!--Grid column-->
            <div class="col-lg-4 col-md-12 mb-4">
 
-             <img src="https://i1.lensdump.com/i/jSQfqi.jpg" alt="jSQfqi.jpg" class="img-fluid mb-4" alt="">
+             <img src="https://i1.lensdump.com/i/jSQfqi.jpg" alt="jSQfqi.jpg" class="img-fluid mb-4">
 
-             <img src="https://i1.lensdump.com/i/jSQFMo.jpg" alt="jSQFMo.jpg" class="img-fluid mb-4" alt=""
-               data-wow-delay="0.3s">
-
-           </div>
-           <!--Grid column-->
-
-           <!--Grid column-->
-           <div class="col-lg-4 col-md-6 mb-4">
-
-             <img src="https://i1.lensdump.com/i/jSQPjm.jpg" alt="jSQPjm.jpg" class="img-fluid mb-4" alt=""
-               data-wow-delay="0.1s">
-
-             <img src="https://i1.lensdump.com/i/jSQotK.jpg" alt="jSQotK.jpg" class="img-fluid mb-4" alt=""
-               data-wow-delay="0.4s">
+             <img src="https://i1.lensdump.com/i/jSQFMo.jpg" alt="jSQFMo.jpg" class="img-fluid mb-4">
 
            </div>
            <!--Grid column-->
@@ -153,11 +140,19 @@
            <!--Grid column-->
            <div class="col-lg-4 col-md-6 mb-4">
 
-             <img src="https://i1.lensdump.com/i/jSQuKZ.jpg" alt="jSQuKZ.jpg" class="img-fluid mb-4" alt=""
-               data-wow-delay="0.2s">
+             <img src="https://i1.lensdump.com/i/jSQPjm.jpg" alt="jSQPjm.jpg" class="img-fluid mb-4">
 
-             <img src="https://i1.lensdump.com/i/jSQDPP.jpg" alt="jSQDPP.jpg" class="img-fluid mb-4" alt=""
-               data-wow-delay="0.5s">
+             <img src="https://i1.lensdump.com/i/jSQotK.jpg" alt="jSQotK.jpg" class="img-fluid mb-4">
+
+           </div>
+           <!--Grid column-->
+
+           <!--Grid column-->
+           <div class="col-lg-4 col-md-6 mb-4">
+
+             <img src="https://i1.lensdump.com/i/jSQuKZ.jpg" alt="jSQuKZ.jpg" class="img-fluid mb-4">
+
+             <img src="https://i1.lensdump.com/i/jSQDPP.jpg" alt="jSQDPP.jpg" class="img-fluid mb-4">
 
            </div>
            <!--Grid column-->
